<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#006772"
    android:layout_gravity="center_horizontal"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8e9f13"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/session_track_tv"
        android:text="@string/session_track"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8e9f13"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/sep1"
        android:text="@string/dash"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8e9f13"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/session_day_tv"
        android:text="@string/session_day"></TextView>
</LinearLayout>
